--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
 
 body {
   margin: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   color: #292929;
   font-size: 16px;
   line-height: 140%;
@@ -27,6 +27,20 @@ body {
   background-size: cover;
 }
 
+@media (max-width: 1024px) {
+  .header {
+    padding: 64px 72px;
+    background-image: url(images/header-bg-small.png);
+  }
+}
+
+@media (max-width: 576px) {
+  .header {
+    padding: 32px 20px;
+    background-position: 0 0;
+  }
+}
+
 .header__top {
   display: flex;
   justify-content: space-between;
@@ -40,6 +54,12 @@ body {
   font-style: italic;
   font-weight: 800;
   letter-spacing: -1.5px;
+}
+
+@media (max-width: 1024px) {
+  .header__title {
+    font-size: 40px;
+  }
 }
 /* #endregion */
 
@@ -55,7 +75,7 @@ body {
   box-sizing: border-box;
   height: 100vh;
   padding: 64px 120px;
-  background: #E5E5E5;
+  background: #e5e5e5;
 }
 
 .menu:target {
@@ -92,6 +112,18 @@ body {
   padding: 120px;
   background-color: white;
 }
+
+@media (max-width: 1024px) {
+  .main {
+    padding: 120px 72px;
+  }
+}
+
+@media (max-width: 576px) {
+  .main {
+    padding: 120px 20px;
+  }
+}
 /* #endregion */
 
 /* #region recommended */
@@ -113,6 +145,20 @@ body {
   display: flex;
   justify-content: center;
   gap: 24px;
+}
+
+@media (max-width: 1024px) {
+  .recommended__products {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media (max-width: 576px) {
+  .recommended__products {
+    flex-direction: column;
+    align-items: stretch;
+  }
 }
 /* #endregion */
 
@@ -179,9 +225,20 @@ body {
 /* #region photo */
 .photo-wide {
   width: 65%;
+  object-fit: cover;
 }
 .photo-square {
   width: 32%;
+  object-fit: cover;
+}
+
+@media (max-width: 576px) {
+  .photo-wide {
+    width: 48.5%;
+  }
+  .photo-square {
+    width: 48.5%;
+  }
 }
 /* #endregion */
 
@@ -192,6 +249,13 @@ body {
   display: flex;
   gap: 24px;
 }
+
+@media (max-width: 576px) {
+  .how-to-buy {
+    display: block;
+  }
+}
+
 .how-to-buy__title {
   flex-basis: 50%;
   margin-top: 0;
@@ -226,5 +290,17 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+/* #endregion */
+
+/* #region logo */
+.logo {
+  height: 24px;
+}
+
+@media (max-width: 576px) {
+  .logo {
+    height: 16px;
+  }
 }
 /* #endregion */
